--- a/src/public/css/top.css
+++ b/src/public/css/top.css
@@ -1,10 +1,10 @@
 .top {
-    max-width: 1540px;
+    min-width: 1540px;
 }
 
 .toppage-list {
     display: inline-block;
-    width: 1540px;
+    width: 100%;
     margin-top: 30px;
     padding-left: 80px;
     border-bottom: 2px solid #5F5F5F;
