--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -122,6 +122,7 @@ html {
     margin-top: 0;
     text-align: left;
     color: #FF5555;
+    font-size: 20px;
 }
 
 /* ログイン、会員登録、プロフィール設定・編集、出品、送付先住所変更、メール認証画面*/
@@ -145,18 +146,14 @@ html {
 
 }
 
+/* カーソル */
+button,
+a {
+    cursor: pointer;
+}
+
 
 /* レスポンシブデザイン */
-@media screen and (min-width:1400px) and (max-width: 1540px) {
-
-    .header-nav__buttons,
-    .logout-button button,
-    .login-button button,
-    .mypage-link,
-    .sellpage-link {
-        font-size: 18px;
-    }
-}
 
 @media screen and (max-width: 850px) {
     .header {
