--- a/src/public/css/top.css
+++ b/src/public/css/top.css
@@ -46,6 +46,7 @@
     font-size: 40px;
     font-weight: 400;
     color: #000000;
+    position: relative;
 }
 
 .item-img {
@@ -63,4 +64,17 @@
     margin-top: 10px;
     text-decoration: none;
     font-size: 25px;
+}
+
+/* 売却済みの商品表示 */
+.sold {
+    position: absolute;
+    top: 50%;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+    transform: translateY(-100%);
+    background-color: #D9D9D9;
+    color: #FF5555;
+    font-weight: bold;
 }
