--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -1,18 +1,15 @@
 .purchase {
-    display: grid;
-    grid-template-columns: 935px 500px;
-    grid-template-rows: 400px 200px 230px;
+    position: relative;
     font-family: "Inter", sans-serif;
 }
 
 .product-info {
-    grid-column: 1/2;
-    grid-row: 1/2;
     display: grid;
-    grid-template-columns: 200px 500px;
-    grid-template-rows: 50px 250px;
+    grid-template-columns: 200px 655px;
+    grid-template-rows: 50px 270px;
     margin: 100px 50px 0 80px;
     width: 805px;
+    height: 320px;
     border-bottom: 1px solid #000000;
 }
 
@@ -46,22 +43,27 @@
     font-weight: 400;
 }
 
+
 .payment {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    margin: 30px 50px 0 80px;
+    position: absolute;
+    top: 350px;
+    left: 0;
+    margin: 30px 50px 30px 80px;
     width: 805px;
+    height: 180px;
     border-bottom: 1px solid #000000;
 }
 
 .address {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    position: absolute;
+    top: 550px;
+    left: 0;
     display: grid;
     grid-template-columns: 670px 150px;
     grid-template-rows: 80px 120px;
     margin: 30px 50px 0 80px;
     width: 805px;
+    height: 200px;
     border-bottom: 1px solid #000000;
 }
 
@@ -119,10 +121,10 @@
 
 /* 支払方法 */
 .sidebar {
-    grid-column: 2/3;
-    grid-row: 1/3;
-    margin: 100px auto;
-    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 935px;
+    width: 500px;
 }
 
 .sidebar-form {
