住所変更画面への遷移、CSS

--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -93,7 +93,7 @@ html {
     color: #000000;
 }
 
-/* ログイン、会員登録画面、プロフィール設定画面のフォーム */
+/* ログイン、会員登録、プロフィール設定、住所変更画面のフォーム */
 .form-area {
     width: 680px;
     margin: 30px auto;
@@ -125,7 +125,7 @@ html {
     font-size: 20px;
 }
 
-/* ログイン、会員登録、プロフィール設定・編集、出品、送付先住所変更、メール認証画面*/
+/* ログイン、会員登録、プロフィール設定・編集、出品、送付先住所変更、メール認証、住所変更画面*/
 .form__button {
     display: block;
     width: 680px;
