--- a/src/public/css/top.css
+++ b/src/public/css/top.css
@@ -8,26 +8,23 @@
     margin-top: 30px;
     padding-left: 80px;
     border-bottom: 2px solid #5F5F5F;
+}
+
+
+.recommend__button,
+.mylist__button {
+    display: inline-block;
+    width: 155px;
+    margin: auto 30px;
+    text-align: center;
+    border: none;
+    background-color: #ffffff;
+    color: #5F5F5F;
     font-size: 24px;
     font-weight: 700;
 }
 
 
-.list1,
-.list2 {
-    display: inline-block;
-    width: 155px;
-    margin: auto 30px;
-    text-align: center;
-}
-
-.list1 {
-    color: #5F5F5F;
-}
-
-.list2 {
-    color: #5F5F5F;
-}
 
 /* 売却済みの商品表示 */
 .sold {
