--- a/src/public/css/top.css
+++ b/src/public/css/top.css
@@ -17,6 +17,7 @@
     width: 155px;
     margin: auto 30px;
     text-align: center;
+    text-decoration: none;
     border: none;
     background-color: #ffffff;
     color: #5F5F5F;
