タブ切替え時の文字色変更

--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -53,6 +53,11 @@
     font-weight: 700;
 }
 
+.selling-items.active,
+.bought-items.active {
+    color: #FF0000;
+}
+
 .mypage-list p:first-child {
     margin-right: 50px;
     margin-left: 100px;
