--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -33,6 +33,11 @@ html {
 }
 
 .header-nav__search {
+    display: inline-block;
+    width: 500px;
+}
+
+.header-nav__search--input {
     width: 100%;
     max-width: 500px;
     height: 50px;
@@ -219,7 +224,7 @@ a {
 
     .header-nav__buttons {
         display: flex;
-        justify-content: left;
+        justify-content: right;
         gap: 10px;
         padding: 0;
     }
