--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -15,13 +15,17 @@
     text-align: center;
 }
 
+.hidden {
+    display: none;
+}
+
 .user-img--edit {
-    width: 179px;
-    height: 49px;
+    padding: 5px 20px;
     border: 2px solid #FF5555;
     border-radius: 10px;
     background-color: #ffffff;
     color: #FF5555;
     font-size: 20px;
     font-weight: 700;
+    cursor: pointer;
 }
