--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -202,8 +202,9 @@
         height: 50px;
     }
 
-    .payment__select {
+    .payment__method {
         margin: 50px 0 0 0;
+        height: 31px;
     }
 
     .address-edit__link {
