--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -5,14 +5,18 @@
     margin: 30px auto;
 }
 
+.user-img,
 .user-img__area {
     display: inline-block;
     width: 150px;
     height: 150px;
     margin-right: 50px;
-    background-color: #D9D9D9;
     border-radius: 75px;
     text-align: center;
+}
+
+.user-img__area {
+    background-color: #D9D9D9;
 }
 
 .hidden {
