--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -1,6 +1,7 @@
 .prof-img__area {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     width: 680px;
     margin: 30px auto;
 }
@@ -32,4 +33,8 @@
     font-size: 20px;
     font-weight: 700;
     cursor: pointer;
+}
+
+.form__error-message:first-of-type {
+    margin-top: 10px;
 }
