--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -15,9 +15,8 @@ html {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1540px;
     height: 80px;
-    margin: 0;
+    margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
@@ -135,7 +134,6 @@ html {
     display: flex;
     flex-wrap: wrap;
     margin: 80px 50px;
-    width: 1013px;
     gap: 70px;
 }
 
